# programmable-resumes

./: .gitignore  CHANGES.md  README.md  RELEASE.md  install.sh  main.pysh  out.py  setup.cfg
docs/: data-json.md  index.md
docs/end-users/: getting-started.md  index.md
docs/template-devs/: index.md  writing-your-template.md
example/: Specfile  computeRole.py  data.json  preamble.tex  spec.py
examples/: Specfile  configs.json  data.json
examples/Awesome-CV/: .gitignore  README.md  Specfile  data.json  preamble.tex  spec.py
examples/Friggeri-CV/: spec.py
examples/LaTeX-Resume-Template/: README.md  Specfile  spec.py
progres/: main.py  main.pysh
progres/utils/: args.py  config.py  io.py
