[metadata]
name = progres
version = 1.0.0
author = Rahul Yedida
author_email = rahul@ryedida.me
description = Programmable resume tool
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.9

[options.entry_points]
console_scripts =
    progres = out:_main
