[metadata]
name = progres
version = 3.1.0
author = Rahul Yedida
author_email = hello@ryedida.me
description = Programmable resume tool
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.9

[options.entry_points]
console_scripts =
    progres = progres.main:_main
